--- a/src/css/components/exercise-card.css
+++ b/src/css/components/exercise-card.css
@@ -1,8 +1,7 @@
 .exercise-card {
   display: flex;
   flex-direction: column;
-  /* width: 335px; */
-  width: 100%;
+  width: 335px;
   padding: 16px;
   height: fit-content;
 
@@ -10,11 +9,11 @@
   background: var(--color-white);
 
   @media screen and (min-width: 768px) {
-    /* width: 344px; */
+    width: 344px;
   }
 
   @media screen and (min-width: 1440px) {
-    /* width: 442px; */
+    width: 442px;
   }
 }
 
